unpackaged/main/default/objects/nbavs__Phone_Event__c/nbavs__Phone_Event__c.object-meta.xml
<CustomObject>
    <description>Supports capture of missed calls.</description>
    <label>Phone Event</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Phone Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>