unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Availability_For_Calls__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Availability_For_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the missed call user was available for regular calls</description>
    <label>Available For Calls</label>
    <type>Checkbox</type>
</CustomField>