unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Availability_On_Line__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Availability_On_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the missed call user was in an off line or on line state</description>
    <label>User OnLine</label>
    <type>Checkbox</type>
</CustomField>