unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Availability_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Availability_Profile_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ref to availability profile object. Will be a null value if no Profile Id is available</description>
    <label>Availability Profile</label>
    <referenceTo>nbavs__AvailabilityProfile__c</referenceTo>
    <relationshipLabel>Phone Events</relationshipLabel>
    <relationshipName>Phone_Events</relationshipName>
    <type>Lookup</type>
</CustomField>