unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Availability_State_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Availability_State_Display_Name__c</fullName>
    <description>The state display name that was defined when the missed call event occurred. This can be derived also via lookup table to AvailabilityState__c object, but if definitions change over time, then having static value at the time call was missed is valuable</description>
    <label>Availability State Display Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>