unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Availability_State_ID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Availability_State_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ref to availability state object. Will be a null value if no State Id is available</description>
    <label>Availability State</label>
    <referenceTo>nbavs__AvailabilityProfileState__c</referenceTo>
    <relationshipLabel>Phone Events</relationshipLabel>
    <relationshipName>Phone_Events</relationshipName>
    <type>Lookup</type>
</CustomField>