unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__AVS_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AVS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User this call relates to</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipName>CRAVSUser</relationshipName>
    <type>Lookup</type>
</CustomField>