unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Call_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Queue_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will be a null value if no Call Queue Id is available.</description>
    <label>Call Queue</label>
    <referenceTo>nbavs__Call_Queue__c</referenceTo>
    <relationshipLabel>Phone Events</relationshipLabel>
    <relationshipName>Phone_Events</relationshipName>
    <type>Lookup</type>
</CustomField>