unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Call_Queue_Lookup__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Queue_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the missed call is a call queue lookup to check if user is available rather than a direct dial attempt</description>
    <label>Call Queue Lookup</label>
    <type>Checkbox</type>
</CustomField>