unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Caller_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Caller_ID_Name__c</fullName>
    <description>The Caller ID Name presented on this Phone Event</description>
    <label>Caller ID Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>