unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Caller_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Caller_ID_Number__c</fullName>
    <description>The Caller ID Number presented on this Phone Event</description>
    <label>Caller ID Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>