unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Dial_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Dial_Type__c</fullName>
    <description>The method by which a number may have been dialled</description>
    <label>Dial Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>DDI</fullName>
            </value>
            <value>
                <fullName>Divert</fullName>
            </value>
            <value>
                <fullName>Call_Queue</fullName>
                <label>Call Queue</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>