unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ErrorLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Log</label>
    <referenceTo>nbavs__ErrorLog__c</referenceTo>
    <relationshipName>Phone_Events</relationshipName>
    <type>Lookup</type>
</CustomField>