unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Event_Type__c</fullName>
    <description>Type of call event</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missed Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>