unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Hangup_Cause__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Hangup_Cause__c</fullName>
    <label>Hangup Cause</label>
    <length>32</length>
    <type>Text</type>
</CustomField>