unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Missed_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Missed_Call_Type__c</fullName>
    <description>If a missed call event, then how far did the missed call progress</description>
    <label>Missed Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No_Devices</fullName>
                <label>No Devices</label>
            </value>
            <value>
                <fullName>Trying</fullName>
            </value>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>All_Busy</fullName>
                <label>All Busy</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>