unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Originating_AVS_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Originating_AVS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User who originated the call</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipName>CROriginatingAVSUser</relationshipName>
    <type>Lookup</type>
</CustomField>