unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Originating_User_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Originating_User_Id__c</fullName>
    <description>User Id, if any, that originated the event</description>
    <externalId>true</externalId>
    <label>Originating User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>