unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Originating_UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Originating_UUID__c</fullName>
    <description>The UUID that originated the call event</description>
    <externalId>true</externalId>
    <label>Originating UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>