unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Ring_Duration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Ring_Duration__c</fullName>
    <description>The duration in seconds that the call rang for</description>
    <label>Ring Duration (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>