unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Time__c</fullName>
    <description>Time that the event occurred</description>
    <label>Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>