unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__To_Call_Reporting__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Call Reporting record</label>
    <referenceTo>nbavs__CallReporting__c</referenceTo>
    <relationshipLabel>Phone Event to Call Reporting</relationshipLabel>
    <relationshipName>Call_Reporting1</relationshipName>
    <type>Lookup</type>
</CustomField>