unpackaged/main/default/objects/nbavs__Phone_Event__c/fields/nbavs__User_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User_Id__c</fullName>
    <description>The User Id that this call event relates to</description>
    <externalId>true</externalId>
    <label>User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>